# sunu-

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  ESPGHAN_Sample_CV.docx  ESPGHAN_Sample_CV.md  Karaciger_Modulu_BIRLESIK.html  README.md  Ulseratif_Kolit_Poliklinik_Takip_Formu.docx  analyze.py  app.py  build_linux.sh  build_macos.sh  build_windows.bat  cocuk-gastroenteroloji-kronik-hastaliklar.md  config.yaml  netlify.toml  render.yaml  requirements.txt  tools_uc_template_generator.py  uc_takip_formu.html  word2pdf_app.pyw  yenidogan_kronik_ishal_algoritmasi.md
.claude/: settings.json
.streamlit/: config.toml
alsat/: LITERATUR.md  RAPOR.md  README.md  __init__.py  __main__.py  alsat_rapor.xlsx  cli.py  dongu.py  final_indikator.py  gostergeler.py  hakem.py  ogrenme.py  olcutler.py  rapor.py  sinama.py  veri.py
app/: config.py  main.py  models.py
arastirma/: MASLD_sarkopeni_kemik_yogunlugu_metodoloji.md  NIHAI_METOD.md  YONTEM_sade_kisaltmasiz.md  calisma_plani_operasyonel.md  konsey_sentez_kapanis.md  ozgunluk_literatur_reviewer2.md  (+2 more)
sav2q1/: README.md  __init__.py  pipeline.py  pyproject.toml  requirements.lock.txt
sav2q1/docx/: __init__.py  assemble.py  references_docx.py  styles.py
sav2q1/engine/: __init__.py  assumptions.py  decision_tree.py  effects.py  figures.py  fmt.py  io_sav.py  ledger.py  missing.py  multiplicity.py  narrate.py  numbers.py  planner.py  posthoc.py  profile.py  runner.py  tables.py
sav2q1/engine/analyses/: __init__.py  categorical.py  correlation.py  descriptives.py  group_compare.py  regression.py
sav2q1/examples/: brief.example.yaml
sav2q1/examples/demo/: analysis_plan.json  evidence_store.json  evidence_store_badquote.json  manuscript.json
sav2q1/examples/demo/sections/: discussion.json  discussion_tampered.json  intro.json  methods.json  results.json  results_tampered.json
sav2q1/lit/: pubmed_http.py
sav2q1/tests/: conftest.py  synth.py  test_decision_tree.py  test_golden.py  test_numbers.py  test_pipeline.py  test_planner.py  test_posthoc.py  test_verifiers.py
sav2q1/tools/: __init__.py  verify_citations.py  verify_numeric.py
(+437 files in other folders)
