[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sav2q1"
version = "0.1.0"
description = "SPSS .sav dosyasından Q1 gönderimine uygun, halüsinasyon-dirençli akademik makale üretim çekirdeği"
requires-python = ">=3.11"
dependencies = [
    "pyreadstat>=1.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "pingouin>=0.5",
    "scikit-posthocs>=0.9",
    "factor_analyzer>=0.5",
    "python-docx>=1.1",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "tabulate>=0.9",
    "matplotlib>=3.8",
    "click>=8.1",
]

[project.optional-dependencies]
sem = ["semopy>=2.3"]   # CFA/SEM (M1) — bazı ortamlarda kurulumu sorunlu olabilir
test = ["pytest>=8.0"]

[tool.setuptools]
packages = ["sav2q1", "sav2q1.engine", "sav2q1.engine.analyses", "sav2q1.docx", "sav2q1.tools"]

[tool.pytest.ini_options]
testpaths = ["sav2q1/tests"]
